# phase-runner

./: .gitignore  .pylintrc  CHECKS  CLAUDE.md  LICENSE  Procfile  README.md  csv_import_plan.md  manage.py  pyproject.toml  pyrightconfig.json  requirements.txt
docs/: TODO.md  schema_diagrams.md
phaserunner/: asgi.py  urls.py  wsgi.py
phaserunner/settings/: base.py  dev.py  production.py  sql_debug.py
static/css/: pico_override.css
workouts/: admin.py  apps.py  constants.py  context_processors.py  enums.py  forms.py  models.py  urls.py  utils.py  views.py
workouts/assets/scss/: _variables.scss  form_styles.scss  navigation.scss  style.scss  workouts.scss
workouts/fixtures/: initial_data.json
workouts/management/commands/: create_test_workouts.py  rebuild_db.py
workouts/migrations/: 0001_initial.py
workouts/static/workouts/css/: form_styles.css  navigation.css  style.css  workouts.css
workouts/static/workouts/js/: account_delete.js  clickable_rows.js  fit-sdk.js  fit_upload.js  (+9 more)
workouts/templates/: 404.html  base.html
workouts/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
workouts/templates/workouts/: account_form.html  create_cycles_form.html  form_base.html  index.html  list_base.html  macrocycle_form.html  macrocycle_list.html  macrocycle_summary.html  mesocycle_form.html  microcycle_form.html  running_list.html  upload_workouts.html  workout_form.html  workout_list.html
workouts/tests/: test_context_processors.py  test_models.py  test_views.py
(+6 files in other folders)
